# interface

./: Cargo.toml  build.rs
.github/workflows/: cd.yml
deb/DEBIAN/: control  postinst
deb/etc/systemd/system/: cage@.service
src/: main.rs
src/calendar/: imp.rs  mod.rs
src/calendar_entry/: imp.rs  mod.rs
src/gauge/: imp.rs  mod.rs
src/gauges/: imp.rs  mod.rs
src/templates/variant1/: calendar-entry.ui  resources.gresource.xml  style.css  window.ui
src/ui/: calendar.ui  gauge.ui  gauges.ui  resources.gresource.xml  style.css  window.ui
src/window/: imp.rs
templates/variant1/: calendar.ui  resources.gresource.xml  window.ui
